--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "docusaurus-plugin-openapi-docs": "2.0.0",
     "docusaurus-theme-openapi-docs": "2.0.0",
     "prism-react-renderer": "^1.3.1",
+    "ramda": "^0.29.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
